@@ -87,18 +87,27 @@
 		<div id="post-items" style="display:block;clear:both;">
 		  <fieldset>
 		  	<legend><h2><label >{% if object.is_sale %}特卖订单{% else %}订单{% endif %}</label> 商品统计列表</h2></legend>
+		  	<table id="id-head-table" class="table table-bordered  table-condensed" >
+      <thead>
+      <tr style="background-color:#01B5A2;">
+          <th colspan="2" >成本：{{ object.total_cost }}</th><th colspan="2">销售额:{{ object.total_sales }}</th><th colspan="2">实付邮费:{{ object.post_fees }}</th>
+          <th >付款单数:{{ object.trade_nums }}</th><th >退款:{{ object.refund_fees }}</th><th colspan="2">购买人数:{{ object.buyer_nums }}</th>
+        </tr>
+        <tr style="background-color:#428BCA;">
+          <th class="col-xs-1">商品编码</th><th class="col-xs-2">商品图片</th><th class="col-xs-1">总数量</th>
+          <th class="col-xs-1">成本</th><th class="col-xs-1">销售额</th><th class="col-xs-1">规格编码</th>
+          <th class="col-xs-2">商品规格</th><th class="col-xs-1">数量</th><th class="col-xs-1">成本</th><th class="col-xs-1">销售额</th>
+        </tr>
+      </thead>
+     </table>
+     
 			  <table class="table table-bordered  table-condensed">
 			  <thead>
-			  	<tr >
-			      <th colspan="2" >成本：{{ object.total_cost }}</th><th colspan="2">销售额:{{ object.total_sales }}</th><th colspan="2">实付邮费:{{ object.post_fees }}</th>
-			      <th >付款单数:{{ object.trade_nums }}</th><th >退款:{{ object.refund_fees }}</th><th colspan="2">购买人数:{{ object.buyer_nums }}</th>
-			    </tr>
 			    <tr style="background-color:#428BCA;">
-			      <th class="col-xs-1">商品编码</th><th class="col-xs-2">商品名称</th><th class="col-xs-1">总数量</th>
-			      <th class="col-xs-1">成本</th><th class="col-xs-1">销售额</th><th class="col-xs-1">规格编码</th>
-			      <th class="col-xs-2">商品规格</th><th class="col-xs-1">数量</th><th class="col-xs-1">成本</th><th class="col-xs-1">销售额</th>
+			      <th class="col-xs-1">--</th><th class="col-xs-2">--</th><th class="col-xs-1">--</th>
+			      <th class="col-xs-1">--</th><th class="col-xs-1">--</th><th class="col-xs-1">--</th>
+			      <th class="col-xs-2">--</th><th class="col-xs-1">--</th><th class="col-xs-1">--</th><th class="col-xs-1">--</th>
 			    </tr>
-
 			  </thead>
 			  <tbody>
 			    {% for trade in trade_items %}
@@ -108,7 +117,12 @@
 					    <tr class="{% if forloop.first and trade.1.cost >= trade.1.sales or sku.cost >= sku.sales %}label-warning{% endif %}">
 					    	{% if forloop.first %}
 					    	<td rowspan="{{ sku_len }}">{{ trade.0 }}</td>
-					    	<td rowspan="{{ sku_len }}">{{ trade.1.title }}</td>
+					    	<td rowspan="{{ sku_len }}">
+					    	  <a href="/admin/items/product/{{ trade.1.product_id }}/" target="_blank">
+					    	      <img src="{{ trade.1.pic_path }}" title="{{ trade.1.title }}" width="180px" height="80px" />
+					    	  </a>
+					    	  <label >{{ trade.1.title }}</label>
+					    </td>
 					    	<td rowspan="{{ sku_len }}">{{ trade.1.num }}</td>
 					    	<td rowspan="{{ sku_len }}">{{ trade.1.cost }}</td>
 					    	<td rowspan="{{ sku_len }}">{{ trade.1.sales }}</td>
@@ -149,6 +163,16 @@
 		 $("#t_datepicker").datetimepicker({
                 timeFormat: "HH:mm:ss",
                 dateFormat: "yy-mm-dd"
+            });
+            //置顶按钮显示/隐藏实现
+    $(window).scroll(function(){
+        var w_height = $(window).height();//浏览器高度
+        var scroll_top = $(document).scrollTop();//滚动条到顶部的垂直高度
+        if(scroll_top > 100){
+         $("#id-head-table").css("position" , "fixed").css("top","0").css("width",1140);
+        }else{
+         $("#id-head-table").css("position" , "static");
+                     }
             });
 	});
 </script>
